err/rapid-spring.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bitarray'...
Listing './lib/python3.5/site-packages/bitarray-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rapid'...
Listing './lib/python3.5/site-packages/rapid/ui'...
Listing './lib/python3.5/site-packages/rapid/ui/qt'...
Compiling './lib/python3.5/site-packages/rapid/ui/qt/gui.py'...
***   File "./lib/python3.5/site-packages/rapid/ui/qt/gui.py", line 38
    print 'No data directory specified. Specify one using either --datadir or --unitsync.'
                                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rapid/ui/text'...
Compiling './lib/python3.5/site-packages/rapid/ui/text/interaction.py'...
***   File "./lib/python3.5/site-packages/rapid/ui/text/interaction.py", line 22
    print header
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rapid/ui/text/main.py'...
***   File "./lib/python3.5/site-packages/rapid/ui/text/main.py", line 81
    print 'Not enough arguments to operation.'
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rapid/ui/text/progressbar.py'...
***   File "./lib/python3.5/site-packages/rapid/ui/text/progressbar.py", line 76
    print '\r',
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rapid/unitsync'...
Compiling './lib/python3.5/site-packages/rapid/unitsync/api.py'...
***   File "./lib/python3.5/site-packages/rapid/unitsync/api.py", line 52
    print 'key of unknown type'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rapid/unitsync/generate.py'...
***   File "./lib/python3.5/site-packages/rapid/unitsync/generate.py", line 78
    print 'must be passed unitsync_api.h to generate bindings'
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rapid/util'...
Listing './lib/python3.5/site-packages/rapid_spring-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
